--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-.kotlin
+# IntelliJ IDEA
+.idea/
+*.iml
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# 编译输出目录
+/out/
+*/out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# 临时文件
+*.log
+*.tmp
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# 操作系统相关
 .DS_Store
+Thumbs.db
+
+# 其他不需要的
+*.bak
+*.swp
+
+# 本地配置
+*.local
+
+# Eclipse/其他IDE（防止未来切换时污染仓库）
+*.project
+*.classpath
+
+# Windows自动生成
+ehthumbs.db
+Desktop.ini
